--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -75,9 +75,7 @@ document.addEventListener("DOMContentLoaded", function () {
       stickyElement.removeClass('sticky');
     }
     });
-
-});
-$(document).ready(function() {
+/* NAVI *////////////////////////////////////////////
 const navs = $('.navi nav');
   const navLinks = $('.navi a');
   const sections = $('.section');
