--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -103,7 +103,7 @@ const navs = $('.navi nav');
       }
     });
 
-    segments.each(function() {
+    /*segments.each(function() {
       var segmentTop = $(this).offset().top;
 
       if (segmentTop >= 0 && scrollTop >= segmentTop - offsetValue) {
@@ -119,7 +119,7 @@ const navs = $('.navi nav');
           navLinks.filter('[href="#' + segmentId + '"]').parent().addClass('selected');
         }
       }
-    });
+    });*/
   });
 
   navLinks.click(function(e) {
