--- a/v2/about.html
+++ b/v2/about.html
@@ -913,19 +913,57 @@ display: none;
 <div class="body">
     <div id="intro" class="section">
         <div class="segment">
-            <h2>A cultural blend of British &amp; Japanese influences.</h2>
-            <p class="l">Originally from Yorkshire, England. I have spent the second half of my life designing & developing products whilst raising my family in Japan.</p>
+            <h2>A cultural blend of British and Japanese sensibilities and influences.</h2>
+            <p class="l">Hailing from Yorkshire, England, I've dedicated the latter half of my life to Japan, where I've nurtured my family and channeled my creative problem-solving instincts as a product designer and <a href="#">home improvement enthusiast.</a></p>
             <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about.jpg);"></span></span>
-            <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. In this role I have acted as a lead and mentor within a team of 10-15 designers and researchers.</p>
+            <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a multinational organization providing device protection and tech-support.</p>
+            <p>For a closer look at my background and experience in design please take a look at the following:</p>
+            <ol>
+                <li><a href="#">Formative years in Design</a></li>
+                <li><a href="#">Working as a Designer & Front End Developer</a></li>
+                <li><a href="#">Senior Design with Asurion</a></li>
+            </ol>
         </div>
         <div id="experience" class="segment">
             <h4>Experience</h4>
-            <p>Most recently I have been one of the lead designers for Asurion’s flagship product, the au Tsukasapo app for KDDI. </p>
-            <p>Previous responsibilities at Asurion saw me support the localization of the au Photo Cloud app from a US codebase. Whilst also leading ongoing design tasks for Chat Systems, CMS, and Admin tools.</p>
-            <p>Prior to joining Asurion I worked as both a Product Designer and Front End Developer at a bookings organization for a 10 year period.</p>
+            <h2>Design Philosophy</h2>
+            <p>My career has been shaped by my appreciation for aesthetics, a user-centered approach, deep thinking, and intuition, all of which have ignited my creative passion. Nevertheless, I've come to realize that decision-making, well-structured processes, long-term planning, and the measurement of success are powerful tools that bring even greater satisfaction when it comes to problem-solving.</p>
+            <h2>Design Principles</h2>
+            <p>These may vary depending on the project,  however I try to adhere to visual design principles that closely resonate with Steve Krug’s concepts presented in ‘Don’t Make Me Think.’  When crafting UI designs, I prefer to emphasize and advocate for principles such as composition, hierarchy, scanability, and intuitive navigation, all of which are fundamental for creating user-friendly interfaces.</p>
+            <p>For UX design, heuristic laws inform my design decisions when consider screen content and user journeys. Jakob’s, Hick’s and Miller’s law influence my decisions to create simple, concise and easy to understand experiences.</p>
+            <ol>
+                <li><a href="#">How I helped define design principles for a product</a></li>
+            </ol>
+            <h2>Understanding a Product</h2>
+            <p>Project requirements vary so It’s crucial to understand the product and service in detail along with knowing it’s context for both its users and business needs. This information then gives you the necessary information to make well informed design decisions.</p>
+            <ol>
+                <li><a href="#">How I created an automated User flow</a></li>
+            </ol>
+            <h2>Iterative Design & Continuous Improvement</h2>
+            <p>I highly value product ownership, iteration and testing. Harnessing these collectively allows a team to look at the broader user experience and incrementally refine a products value, design and usability with the overall aim of improving user satisfaction.</p>
+            <p>While feature design captures attention, continuously improving a product can have an equal or greater influence on user satisfaction.</p>
+            <ol>
+                <li><a href="#">A/B Testing</a></li>
+                <li><a href="#">Heuristic Evaluation</a></li>
+            </ol>
+            <h2>How I like to work</h2>
+            <ul id="skills">
+                <li>Work hard and fast</li>
+                <li>Have a wide skill set to support a team</li>
+                <li>Convert ideas into visuals</li>
+                <li>Advocate for improvement</li>
+                <li>Collaborate and encourage team</li>
+            </ul>
+            <h2>How I envision the next 3 years</h2>
+            <ul>
+                <li>I want to work on successful products and help to shape that success.</li>
+                <li>I want to develop more design leadership and management skills.</li>
+                <li>I want to advocate for the design team and give the team a role in wider decision making.</li>
+                <li>I want to be part of a rich design culture and help to develop it.</li>
+            </ul>
         </div>
 
-        <div id="interests" class="segment">
+        <!--div id="interests" class="segment">
             <h4>Interests</h4>
             <div class="gallery-container">
                 <div class="gallery">
@@ -935,7 +973,7 @@ display: none;
               </div>
             </div>
             <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
-        </div>
+        </div-->
     </div>
     <div id="skills" class="section">
         <div id="matrix" class="segment">
