--- a/v2/about.html
+++ b/v2/about.html
@@ -189,10 +189,11 @@ font-weight: 700;
     p.l { font-size: 2.2em; line-height: 175%; }
 
     h1, h2, h3 { font-size: 1.8em; }
-    #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
+    ol li, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
     #skills ul li{ font-size: 1.4em; }
     h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
     #showcase h3 a > span,
+    ol li a,
     h3 a, 
     p.l span, 
     p u, 
@@ -258,6 +259,7 @@ font-weight: 700;
     .special ul li h3:before{
     color: #FFF;
     }
+    ol li a,
     .icn{
         color: #346672;
     }
@@ -924,21 +926,29 @@ display: none;
                 <li><a href="#">Senior Design with Asurion</a></li>
             </ol>
         </div>
-        <div id="experience" class="segment">
-            <h4>Experience</h4>
+    </div>
+    <div id="background" class="section">
+        <h4>Background</h4>
+        <div class="segment">
             <h2>Design Philosophy</h2>
             <p>My career has been shaped by my appreciation for aesthetics, a user-centered approach, deep thinking, and intuition, all of which have ignited my creative passion. Nevertheless, I've come to realize that decision-making, well-structured processes, long-term planning, and the measurement of success are powerful tools that bring even greater satisfaction when it comes to problem-solving.</p>
+        </div>
+        <div class="segment">
             <h2>Design Principles</h2>
             <p>These may vary depending on the project,  however I try to adhere to visual design principles that closely resonate with Steve Krug’s concepts presented in ‘Don’t Make Me Think.’  When crafting UI designs, I prefer to emphasize and advocate for principles such as composition, hierarchy, scanability, and intuitive navigation, all of which are fundamental for creating user-friendly interfaces.</p>
             <p>For UX design, heuristic laws inform my design decisions when consider screen content and user journeys. Jakob’s, Hick’s and Miller’s law influence my decisions to create simple, concise and easy to understand experiences.</p>
             <ol>
                 <li><a href="#">How I helped define design principles for a product</a></li>
             </ol>
+        </div>
+        <div class="segment">
             <h2>Understanding a Product</h2>
             <p>Project requirements vary so It’s crucial to understand the product and service in detail along with knowing it’s context for both its users and business needs. This information then gives you the necessary information to make well informed design decisions.</p>
             <ol>
                 <li><a href="#">How I created an automated User flow</a></li>
             </ol>
+        </div>
+        <div class="segment">
             <h2>Iterative Design & Continuous Improvement</h2>
             <p>I highly value product ownership, iteration and testing. Harnessing these collectively allows a team to look at the broader user experience and incrementally refine a products value, design and usability with the overall aim of improving user satisfaction.</p>
             <p>While feature design captures attention, continuously improving a product can have an equal or greater influence on user satisfaction.</p>
@@ -946,6 +956,8 @@ display: none;
                 <li><a href="#">A/B Testing</a></li>
                 <li><a href="#">Heuristic Evaluation</a></li>
             </ol>
+        </div>
+        <div class="segment">
             <h2>How I like to work</h2>
             <ul id="skills">
                 <li>Work hard and fast</li>
@@ -954,6 +966,8 @@ display: none;
                 <li>Advocate for improvement</li>
                 <li>Collaborate and encourage team</li>
             </ul>
+        </div>
+        <div class="segment">
             <h2>How I envision the next 3 years</h2>
             <ul>
                 <li>I want to work on successful products and help to shape that success.</li>
@@ -962,6 +976,7 @@ display: none;
                 <li>I want to be part of a rich design culture and help to develop it.</li>
             </ul>
         </div>
+    </div>
 
         <!--div id="interests" class="segment">
             <h4>Interests</h4>
