--- a/v2/about.html
+++ b/v2/about.html
@@ -186,9 +186,9 @@ font-weight: 700;
     }
 
     h1{ font-weight: 400; }
-    p.l { font-size: 2.2em; line-height: 175%; }
+    p.l { font-size: 1.8em; line-height: 175%; }
 
-    h1, h2, h3 { font-size: 1.8em; }
+ h1, h2, h3 { font-size: 1.8em; }
     ol li, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
     #skills ul li{ font-size: 1.4em; }
     h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
@@ -527,6 +527,7 @@ z-index: 100;
     .section h4{
     margin-bottom: 8px;
     }
+    .section h2,
     .section p{
     max-width: 668px;
     margin-bottom: 16px;
