--- a/v2/about.html
+++ b/v2/about.html
@@ -745,6 +745,7 @@ align-items: center;
     #intro .wrap{
         display: block;
     width: 668px;
+    margin: 0 0 36px 0;
     }
     /*/////////////////////////////////////////////////////////////*/
     }
