--- a/v2/about.html
+++ b/v2/about.html
@@ -1235,8 +1235,17 @@ display: none;
         <a href="https://peteroper.github.io/portfolio/v2/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
         <nav class="selected">
             <a href="#intro">About</a>
-            <a href="#experience">Experience</a>
-            <a href="#interests">Interests</a>
+        </nav>
+        <nav>
+            <a href="#philosophy">Design Philosophy</a>
+            <a href="#principles">Design Principles</a>
+            <a href="#product">Product Knowledge</a>
+            <a href="#iterative">Iterative Design</a>
+        </nav>
+        <nav>
+            <a href="#intro">Self</a>
+            <a href="#experience">How I like to work</a>
+            <a href="#interests">Goals</a>
         </nav>
         <nav>
             <a href="#skills">Skills</a>
