--- a/v2/about.html
+++ b/v2/about.html
@@ -931,11 +931,11 @@ display: none;
     </div>
     <div id="background" class="section">
         <h4>Background</h4>
-        <div class="segment">
+        <div id="philosophy" class="segment">
             <h2>Design Philosophy</h2>
             <p>My career has been shaped by my appreciation for aesthetics, a user-centered approach, deep thinking, and intuition, all of which have ignited my creative passion. Nevertheless, I've come to realize that decision-making, well-structured processes, long-term planning, and the measurement of success are powerful tools that bring even greater satisfaction when it comes to problem-solving.</p>
         </div>
-        <div class="segment">
+        <div id="principles" class="segment">
             <h2>Design Principles</h2>
             <p>These may vary depending on the project,  however I try to adhere to visual design principles that closely resonate with Steve Krug’s concepts presented in ‘Don’t Make Me Think.’  When crafting UI designs, I prefer to emphasize and advocate for principles such as composition, hierarchy, scanability, and intuitive navigation, all of which are fundamental for creating user-friendly interfaces.</p>
             <p>For UX design, heuristic laws inform my design decisions when consider screen content and user journeys. Jakob’s, Hick’s and Miller’s law influence my decisions to create simple, concise and easy to understand experiences.</p>
@@ -943,14 +943,14 @@ display: none;
                 <li><a href="#">How I helped define design principles for a product</a></li>
             </ol>
         </div>
-        <div class="segment">
+        <div id="product" class="segment">
             <h2>Understanding a Product</h2>
             <p>Project requirements vary so It’s crucial to understand the product and service in detail along with knowing it’s context for both its users and business needs. This information then gives you the necessary information to make well informed design decisions.</p>
             <ol>
                 <li><a href="#">How I created an automated User flow</a></li>
             </ol>
         </div>
-        <div class="segment">
+        <div id="iterative" class="segment">
             <h2>Iterative Design & Continuous Improvement</h2>
             <p>I highly value product ownership, iteration and testing. Harnessing these collectively allows a team to look at the broader user experience and incrementally refine a products value, design and usability with the overall aim of improving user satisfaction.</p>
             <p>While feature design captures attention, continuously improving a product can have an equal or greater influence on user satisfaction.</p>
@@ -959,7 +959,7 @@ display: none;
                 <li><a href="#">Heuristic Evaluation</a></li>
             </ol>
         </div>
-        <div class="segment">
+        <div id="work-style" class="segment">
             <h2>How I like to work</h2>
             <ul id="skills">
                 <li>Work hard and fast</li>
@@ -969,7 +969,7 @@ display: none;
                 <li>Collaborate and encourage team</li>
             </ul>
         </div>
-        <div class="segment">
+        <div id="goals" class="segment">
             <h2>How I envision the next 3 years</h2>
             <ul>
                 <li>I want to work on successful products and help to shape that success.</li>
