--- a/v2/about.html
+++ b/v2/about.html
@@ -394,6 +394,11 @@ html, body {
 a{
 text-decoration: none;
 }
+li{
+    list-style-position: outside;
+    padding-left: 16px;
+    margin-left: 16px;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* LAYOUT */
 /*/////////////////////////////////////////////////////////////*/
