--- a/v2/about.html
+++ b/v2/about.html
@@ -394,10 +394,10 @@ html, body {
 a{
 text-decoration: none;
 }
-li{
+ol li{
     list-style-position: outside;
     padding-left: 16px;
-    margin-left: 16px;
+    margin: 0 0 8px 16px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* LAYOUT */
