--- a/v2/about.html
+++ b/v2/about.html
@@ -1242,6 +1242,7 @@ display: none;
             <a href="#intro">About</a>
         </nav>
         <nav>
+            <a href="#background">Background</a>
             <a href="#philosophy">Design Philosophy</a>
             <a href="#principles">Design Principles</a>
             <a href="#product">Product Knowledge</a>
