--- a/v2/about.html
+++ b/v2/about.html
@@ -263,6 +263,9 @@ font-weight: 700;
     .icn{
         color: #346672;
     }
+    a{
+        color: #4a90e2;
+    }
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
 /*/////////////////////////////////////////////////////////////*/
