--- a/v2/about.html
+++ b/v2/about.html
@@ -967,8 +967,24 @@ display: none;
                 <li><a href="#">Heuristic Evaluation</a></li>
             </ol>
         </div>
+    </div>
+
+        <!--div id="interests" class="segment">
+            <h4>Interests</h4>
+            <div class="gallery-container">
+                <div class="gallery">
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about2.png);" ></span></span>
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about3.png);" ></span></span>
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about4.png);" ></span></span>
+              </div>
+            </div>
+            <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
+        </div-->
+    <div id="experience" class="section"><div id="skills">
+        <h2>Experience</h2>
         <div id="work-style" class="segment">
             <h2>How I like to work</h2>
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
             <ul id="skills">
                 <li>Work hard and fast</li>
                 <li>Have a wide skill set to support a team</li>
@@ -985,25 +1001,6 @@ display: none;
                 <li>I want to advocate for the design team and give the team a role in wider decision making.</li>
                 <li>I want to be part of a rich design culture and help to develop it.</li>
             </ul>
-        </div>
-    </div>
-
-        <!--div id="interests" class="segment">
-            <h4>Interests</h4>
-            <div class="gallery-container">
-                <div class="gallery">
-                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about2.png);" ></span></span>
-                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about3.png);" ></span></span>
-                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about4.png);" ></span></span>
-              </div>
-            </div>
-            <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
-        </div-->
-    <div id="skills" class="section">
-        <div id="matrix" class="segment">
-            <h4>UX Skill Matrix</h4>
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
-            <!--p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p-->
         </div>
         <div id="general-skills" class="segment">
             <h4>Skills</h4>
@@ -1073,7 +1070,7 @@ display: none;
                 <li>B2B</li>
             </ul>
         </div>
-    </div>
+    </div></div>
     <!--div id="about" class="section">
         <div id="Personality" class="segment">
             <h4>Personality</h4>
@@ -1257,7 +1254,7 @@ display: none;
             <a href="#interests">Goals</a>
         </nav>
         <nav>
-            <a href="#skills">Skills</a>
+            <a href="#experience">Experience</a>
             <a href="#design-skills">Design</a>
             <a href="#product-skills">Product</a>
             <a href="#dev-skills">Development</a>
