--- a/v2/about.html
+++ b/v2/about.html
@@ -1100,7 +1100,7 @@ display: none;
     </div>
     <!-- posts ends -->
 
-    <div id="experience" class="section"><div id="skills">
+    <div id="experience" class="section">
         <h2>Experience</h2>
         <div id="work-style" class="segment">
             <h2>How I like to work</h2>
@@ -1122,6 +1122,7 @@ display: none;
                 <li>I want to be part of a rich design culture and help to develop it.</li>
             </ul>
         </div>
+        <div id="skills">
         <div id="general-skills" class="segment">
             <h4>Skills</h4>
             <ul>
