--- a/v2/about.html
+++ b/v2/about.html
@@ -1124,7 +1124,7 @@ display: none;
         </div>
         <div id="skills">
         <div id="general-skills" class="segment">
-            <h4>Skills</h4>
+            <h4>Generalist Skills</h4>
             <ul>
                 <li>UI/UX</li>
                 <li>User Research</li>
