--- a/v2/about.html
+++ b/v2/about.html
@@ -647,9 +647,6 @@ z-index: 100;
 /*/////////////////////////////////////////////////////////////*/
 /* POSTS */
 /*/////////////////////////////////////////////////////////////*/
-#posts{
-    border: 0!important;
-}   
 #posts nav a{
         border-width: 1px;
         border-style: solid;
@@ -1123,7 +1120,9 @@ display: none;
             </ul>
         </div>
         <div id="skills">
+            <h2>Product Design & Development Skills</h2>
         <div id="general-skills" class="segment">
+
             <h4>Generalist Skills</h4>
             <ul>
                 <li>UI/UX</li>
@@ -1245,9 +1244,9 @@ display: none;
             <a href="#interests">Goals</a>
             <a href="#design-skills">Skills</a>
         </nav>
-        <nav>
+        <!--nav>
             <a href="#posts">Design Journal</a>
-        </nav>
+        </nav-->
         <nav class="links">
             <a href="https://www.linkedin.com/in/peter-roper" target="_blank">LinkedIn</a>
             <!--a href="#">LINE</a-->
