--- a/v2/about.html
+++ b/v2/about.html
@@ -949,7 +949,7 @@ display: none;
             </ol>
         </div>
         <div id="product" class="segment">
-            <h2>Understanding a Product</h2>
+            <h2>Project Awareness</h2>
             <p>Project requirements vary so It’s crucial to understand the product and service in detail along with knowing it’s context for both its users and business needs. This information then gives you the necessary information to make well informed design decisions.</p>
             <ol>
                 <li><a href="#">How I created an automated User flow</a></li>
@@ -1235,7 +1235,7 @@ display: none;
             <a href="#background">Background</a>
             <a href="#philosophy">Design Philosophy</a>
             <a href="#principles">Design Principles</a>
-            <a href="#product">Product Knowledge</a>
+            <a href="#product">Project Awareness</a>
             <a href="#iterative">Iterative Design</a>
         </nav>
         <nav>
