--- a/v2/index.html
+++ b/v2/index.html
@@ -256,6 +256,9 @@ color: #FFF;
 .icn{
 color: #346672;
 }
+a{
+color: #4a90e2;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
 /*/////////////////////////////////////////////////////////////*/
@@ -906,6 +909,7 @@ padding-right: 0;
         <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/tkyo.png);" ></span>
         <h2>Hello, I'm Peter.</h2>
         <p class="l b"><span>A Product Designer based in Tokyo with a back pocket brimming with experience.</span> I have created digital products since the very early days of the internets transition into visual design.</p>
+        <p>Read more about my <a href="https://peteroper.github.io/portfolio/v2/about.html">background and experience.</a></p>
     </div>
 
             <!-- posts start -->
