--- a/v2/index.html
+++ b/v2/index.html
@@ -520,6 +520,9 @@ margin-bottom: 8px;
 max-width: 668px;
 margin-bottom: 16px;
 }
+#intro h2{
+    margin-bottom: 36px;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* IMGS */
 /*/////////////////////////////////////////////////////////////*/
