--- a/v2/about.html
+++ b/v2/about.html
@@ -189,11 +189,11 @@ font-weight: 700;
     p.l { font-size: 1.8em; line-height: 175%; }
 
  h1, h2, h3 { font-size: 1.8em; }
-    ol li, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
+    li, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
     #skills ul li{ font-size: 1.4em; }
     h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
     #showcase h3 a > span,
-    ol li a,
+    li a,
     h3 a, 
     p.l span, 
     p u, 
@@ -1100,23 +1100,17 @@ display: none;
     <div id="experience" class="section">
         <h4>Experience</h4>
         <div id="work-style" class="segment">
-            <h2>How I like to work</h2>
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
-            <ul id="skills">
-                <li>Work hard and fast</li>
-                <li>Have a wide skill set to support a team</li>
-                <li>Convert ideas into visuals</li>
-                <li>Advocate for improvement</li>
-                <li>Collaborate and encourage team</li>
-            </ul>
+            <h2>How I like to work</h2>
+            <p></p>
         </div>
         <div id="goals" class="segment">
             <h2>How I envision the next 3 years</h2>
             <ul>
-                <li>I want to work on successful products and help to shape that success.</li>
-                <li>I want to develop more design leadership and management skills.</li>
-                <li>I want to advocate for the design team and give the team a role in wider decision making.</li>
-                <li>I want to be part of a rich design culture and help to develop it.</li>
+                <li>To work on successful products and help to shape that success.</li>
+                <li>Develop design leadership and management skills.</li>
+                <li>Advocate for the design team and give the team a role in wider decision making.</li>
+                <li>Establish and be part of a rich design culture.</li>
             </ul>
         </div>
         <div id="skills">
@@ -1244,9 +1238,9 @@ display: none;
             <a href="#interests">Goals</a>
             <a href="#design-skills">Skills</a>
         </nav>
-        <!--nav>
+        <nav>
             <a href="#posts">Design Journal</a>
-        </nav-->
+        </nav>
         <nav class="links">
             <a href="https://www.linkedin.com/in/peter-roper" target="_blank">LinkedIn</a>
             <!--a href="#">LINE</a-->
