--- a/v2/about.html
+++ b/v2/about.html
@@ -1102,7 +1102,10 @@ display: none;
         <div id="work-style" class="segment">
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
             <h2>How I like to work</h2>
-            <p></p>
+            <p>As a design generalist I maintain a broad skill with the aim of effectively supporting my team.
+            <p>I appreciate hard work and combine it with a methodical approach so that I can get the most work done in the shortest length of time. This allows me to share early and optimize the time available to collaborate with team members.</p>
+            <p>I observe and look out for problems. Whether related to a product, process or individual I’m usually prepared in advance to advocate ideas and proposals.</p>
+            <p>I enjoy team work and contributing to a culture. Building relationships at work is as important as the products built. I enjoy a joke and take an interest in people, giving encouragement when needed.</p>
         </div>
         <div id="goals" class="segment">
             <h2>How I envision the next 3 years</h2>
