--- a/v2/about.html
+++ b/v2/about.html
@@ -1099,7 +1099,7 @@ display: none;
 
     <div id="experience" class="section">
         <h4>Experience</h4>
-        <div id="work-style" class="segment">
+        <div id="process" class="segment">
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
             <h2>How I like to work</h2>
             <p>As a design generalist I maintain a broad skill with the aim of effectively supporting my team.
@@ -1237,7 +1237,7 @@ display: none;
         </nav>
         <nav>
             <a href="#experience">Experience</a>
-            <a href="#experience">How I like to work</a>
+            <a href="#experience">Process</a>
             <a href="#interests">Goals</a>
             <a href="#design-skills">Skills</a>
         </nav>
