--- a/v2/about.html
+++ b/v2/about.html
@@ -206,7 +206,7 @@ font-weight: 700;
         font-size: 0.68em;    
     } 
     @media only screen and (max-width: 992px) {
-        p.l { font-size: 2.0em; }
+        p.l { line-height: 160%; }
         #titlebar nav a, .navi nav.links a{ font-size: 1.8em; }
         #posts p{ font-size: 1.5em; }
     }
@@ -236,6 +236,7 @@ font-weight: 700;
     .section p{
     opacity: 68%;
     }
+    .section li a,
     .b span,
     .special > p,
     p.l span,
