--- a/v2/about.html
+++ b/v2/about.html
@@ -232,11 +232,10 @@ font-weight: 700;
     }
     a h1,
     #posts nav a,
-    .section li,
+    .section ul li,
     .section p{
     opacity: 68%;
     }
-    .section li a,
     .b span,
     .special > p,
     p.l span,
